feat: Criacao de endpoint para salvar foto do usuario logado (#64)
* feat: Criacao de endpoint para salvar foto do usuario logado

* refactor: Correcao de descricao Swagger UsuarioRequest e Response

* refactor: Correcoes classe test e exclusao de log, criacao de e

* refactor: Correcao de endentacao tabela e classe UsuarioService